# noteshrink-c

./: .gitmodules  CMakeLists.txt  README.md
include/: noteshrink.h
man/man1/: noteshrink.1
man/man7/: noteshrink.7
src/: main.c  main.cpp  noteshrink.c  noteshrink.cpp  stb_image.c
